nomination css fix, no longer overlaps end

--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,9 @@ body {
 }
 
 .nomination {
-  width: 120px;
-  margin: 10px;
+  max-width: 90%;
+  max-height: 20%;
+  /* margin: 10px; */
 }
 
 .nomination-container {
